@@ -4,7 +4,9 @@
 	cd ~/nco;git commit -a -m 'Version 5.1.0: Rattlesnake';git push
 	git tag -a 5.1.0 -m 'all: filters, cmp_sng, CCR, nc 4.9.0; ncremap fix sub-sgs nrm, add ssgs thr';git push --tags
 
-	* Rewrite nc_inq_var_filter_ids() stub for old (pre-4.6.0) netCDF libraries
+	* Rewrite nc_inq_var_filter_info() stub for old (pre-4.7.4) netCDF libraries
+
+	* Rewrite nc_inq_var_filter_ids() stub for old (pre-4.7.4) netCDF libraries
 
 	* Simplify nco_cnv_arm_time_install() prototype to exploit new compression API
 
